crates/apollo-compiler/test_data/diagnostics/0095_interface_implementation_declared_once.txt
Error: object type `Object` implements interface `Intf` more than once
   ╭─[0095_interface_implementation_declared_once.graphql:5:31]
   │
 5 │ type Object implements Intf & Intf {
   │                        ──┬─   ──┬─  
   │                          ╰────────── previous implementation of `Intf` here
   │                                 │   
   │                                 ╰─── `Intf` implemented again here
───╯
Error: object type `Extended` implements interface `Intf` more than once
    ╭─[0095_interface_implementation_declared_once.graphql:12:33]
    │
  9 │ type Extended implements Intf {
    │                          ──┬─  
    │                            ╰─── previous implementation of `Intf` here
    │ 
 12 │ extend type Extended implements Intf
    │                                 ──┬─  
    │                                   ╰─── `Intf` implemented again here
────╯
Error: interface type `SubIntf` implements interface `Intf` more than once
    ╭─[0095_interface_implementation_declared_once.graphql:14:37]
    │
 14 │ interface SubIntf implements Intf & Intf {
    │                              ──┬─   ──┬─  
    │                                ╰────────── previous implementation of `Intf` here
    │                                       │   
    │                                       ╰─── `Intf` implemented again here
────╯

